Perkin-UAT/force-app/main/default/objects/SMAX_PS_Geography__c/SMAX_PS_Geography__c.object-meta.xml
<CustomObject>
    <description>Table to hold Zip cluster , Sub District, and an MPG</description>
    <label>Geography</label>
    <nameField>
        <label>Geography Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geographies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>