Perkin-UAT/force-app/main/default/objects/SMAX_PS_Geography__c/fields/BD_Territory__c.field-meta.xml
<CustomField>
    <fullName>BD_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory</label>
    <referenceTo>SVMXC__Territory__c</referenceTo>
    <relationshipLabel>Geographies</relationshipLabel>
    <relationshipName>Geographies</relationshipName>
    <type>Lookup</type>
</CustomField>