Perkin-UAT/force-app/main/default/objects/SMAX_PS_Geography__c/fields/SMAX_PS_3_Digit_Zip__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_3_Digit_Zip__c</fullName>
    <description>Holds the Three Digit ZipCode</description>
    <label>Three Digit Zip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>