Perkin-UAT/force-app/main/default/objects/SMAX_PS_Geography__c/fields/SMAX_PS_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Cost_Center__c</fullName>
    <label>Cost Center</label>
    <length>25</length>
    <type>Text</type>
</CustomField>