Perkin-UAT/force-app/main/default/objects/SMAX_PS_Geography__c/fields/SMAX_PS_Geography_Description__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Geography_Description__c</fullName>
    <description>Denotes the geography description</description>
    <inlineHelpText>Denotes the geography description</inlineHelpText>
    <label>Geography Description</label>
    <type>TextArea</type>
</CustomField>