Perkin-UAT/force-app/main/default/objects/SMAX_PS_Geography__c/fields/SMAX_PS_LocationCode__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_LocationCode__c</fullName>
    <externalId>true</externalId>
    <label>Location Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>