Perkin-UAT/force-app/main/default/objects/SMAX_PS_Geography__c/listViews/SMAX_PS_Unassigned_Geographies.listView-meta.xml
<ListView>
    <fullName>SMAX_PS_Unassigned_Geographies</fullName>
    <columns>NAME</columns>
    <columns>SMAX_PS_Geography_Description__c</columns>
    <columns>SMAX_PS_LocationCode__c</columns>
    <columns>BD_Territory__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BD_Territory__c</field>
        <operation>equals</operation>
    </filters>
    <label>Unassigned Geographies</label>
</ListView>